Spacing Fix

--- a/css/HomeStyle.css
+++ b/css/HomeStyle.css
@@ -96,7 +96,7 @@ ul li:hover a {
 .Title {
 	color: var(--theme);
 	font-size: xxx-large;
-	padding-top: 120px;
+	padding-top: 100px;
 }
 
 .head {
